syntax = "proto3";

package auth;

service AuthService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string userId = 1;
}

message GetUserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string birthDate = 4;
}